public/css/recall.css
/******************************************
/* CSS
/*******************************************/

/* Box Model Hack */
* {
    box-sizing: border-box;
}

/******************************************
  /* FONTS
  /*******************************************/

html {
    font-size: 62.5%;
}

body {
    font-size: 1.6rem;
}

h1 {
    font-size: 4rem;
}

.shape {
    font-size: 10rem;
}

.scoreboard {
    font-size: 3rem;
}

h2,
p {
    font-size: 3.6rem;
}

.logoutButton,
.difficultyButton {
    font-size: 2.4rem;
}

#startTestButton {
    font-size: 2.4rem;
}

/******************************************
  /* LAYOUT
  /*******************************************/

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

header {
    height: 10rem;
    display: flex;
    justify-content: center;
}

#pageLinks {
    width: 90%;
    height: 10rem;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    gap: 4rem;
}

.instructionItems {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}


main {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    gap: 2.5rem;
    margin-top: 5rem;
}

#shape-container {
    height: 1.5rem;
    gap: 5rem;
    text-align: center;
}

h1 {
    width: 100%;
    text-align: center;
}

.scoreboard {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 10rem;
    list-style: none;
}

/* MEDIA QUERIES */




/******************************************
  /* ADDITIONAL STYLES
  /*******************************************/

body {
    background-color: #e7f2f8;
}

header {
    background-color: #9bccfd;
}

h2,
p {
    width: 50%;
}

.bi-triangle-fill {
    color: red;
}

.bi-circle-fill {
    color: orange;
}

.bi-square-fill {
    color: yellow;
}

.bi-heart-fill {
    color: green;
}

.bi-star-fill {
    color: blue;
}

.bi-pentagon-fill {
    color: indigo;
}

.bi-hexagon-fill {
    color: violet;
}

#instructionsContainer {
    text-align: center;
}

.hidden {
    display: none;
}

.difficultyButton {
    width: 20rem;
    height: 7.5rem;
}

